# agente_instagram

./: .gitattributes  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/ai-service/: .env.example  pyproject.toml
apps/ai-service/app/: config.py  db.py  deps.py  main.py  schemas.py
apps/ai-service/app/api/: v1.py
apps/ai-service/app/core/: chunking.py  embeddings.py  llm.py  parsers.py  retriever.py
apps/ai-service/app/services/: analyze_service.py  ingest_service.py  reply_service.py
apps/ai-service/tests/: test_chunking.py  test_handover_match.py  test_health.py  test_llm_parse.py
apps/api/: .env.example  docker-entrypoint.sh  package.json  tsconfig.build.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/common/auth/: auth.types.ts  (+4 more)
apps/api/src/config/: configuration.ts
apps/api/test/: auth.e2e-spec.ts  helpers.ts  jest-e2e.json  setup-e2e.ts  tenancy.e2e-spec.ts
apps/web/: .env.example  next.config.mjs  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/lib/: api.ts  auth-context.tsx  flow-meta.ts  socket.ts  utils.ts
docs/: 00-VISION-Y-ALCANCE.md  01-REQUERIMIENTOS-Y-POLITICAS-META.md  02-ARQUITECTURA.md  03-MODELO-DE-DATOS.md  04-FLUJOS.md  05-API.md  06-ESTRUCTURA-DE-CARPETAS.md  07-SEGURIDAD.md  08-DESPLIEGUE.md  09-PLAN-DE-FASES.md  10-DESPLIEGUE-VPS-PORTAINER.md
infra/compose/: docker-compose.dev.yml  docker-compose.prod.yml
infra/compose/postgres-init/: 01-create-app-role.sql
infra/docker/: ai-service.Dockerfile  api.Dockerfile  web.Dockerfile
infra/scripts/: generate-jwt-keys.mjs
(+115 files in other folders)
